--- a/Jonas/Jonas.csproj
+++ b/Jonas/Jonas.csproj
@@ -80,7 +80,9 @@
     <Compile Include="Utility\FacebookMessengerStub.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
